--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -82,30 +82,30 @@ cas-k2-power-armor-mk3-inv-size=[item=power-armor-mk3][color=#9000d3]K2's Power 
 cas-k2-power-armor-mk4-inv-size=[item=power-armor-mk4][color=#9000d3]K2's Power Armour Mk4 Inv-B Size[/color]
 
 # Nullius
-nullius-1-grid-size-h=[item=nullius-chassis-1][color=#e00700]Nullius's Armor Chassis 1 Hight[/color]
-nullius-1-grid-size-w=[item=nullius-chassis-1][color=#e00700]Nullius's Armor Chassis 1 Width[/color]
+nullius-1-grid-size-h=[item=nullius-chassis-1][color=#9000d3]Nullius's Armor Chassis 1 Hight[/color]
+nullius-1-grid-size-w=[item=nullius-chassis-1][color=#9000d3]Nullius's Armor Chassis 1 Width[/color]
 
-nullius-2-grid-size-h=[item=nullius-chassis-2][color=#e00700]Nullius's Armor Chassis 2 Hight[/color]
-nullius-2-grid-size-w=[item=nullius-chassis-2][color=#e00700]Nullius's Armor Chassis 2 Width[/color]
+nullius-2-grid-size-h=[item=nullius-chassis-2][color=#9000d3]Nullius's Armor Chassis 2 Hight[/color]
+nullius-2-grid-size-w=[item=nullius-chassis-2][color=#9000d3]Nullius's Armor Chassis 2 Width[/color]
 
-nullius-3-grid-size-h=[item=nullius-chassis-3][color=#e00700]Nullius's Armor Chassis 3 Hight[/color]
-nullius-3-grid-size-w=[item=nullius-chassis-3][color=#e00700]Nullius's Armor Chassis 3 Width[/color]
+nullius-3-grid-size-h=[item=nullius-chassis-3][color=#9000d3]Nullius's Armor Chassis 3 Hight[/color]
+nullius-3-grid-size-w=[item=nullius-chassis-3][color=#9000d3]Nullius's Armor Chassis 3 Width[/color]
 
-nullius-4-grid-size-h=[item=nullius-chassis-4][color=#e00700]Nullius's Armor Chassis 4 Hight[/color]
-nullius-4-grid-size-w=[item=nullius-chassis-4][color=#e00700]Nullius's Armor Chassis 4 Width[/color]
+nullius-4-grid-size-h=[item=nullius-chassis-4][color=#9000d3]Nullius's Armor Chassis 4 Hight[/color]
+nullius-4-grid-size-w=[item=nullius-chassis-4][color=#9000d3]Nullius's Armor Chassis 4 Width[/color]
 
-nullius-5-grid-size-h=[item=nullius-chassis-5][color=#e00700]Nullius's Armor Chassis 5 Hight[/color]
-nullius-5-grid-size-w=[item=nullius-chassis-5][color=#e00700]Nullius's Armor Chassis 5 Width[/color]
+nullius-5-grid-size-h=[item=nullius-chassis-5][color=#9000d3]Nullius's Armor Chassis 5 Hight[/color]
+nullius-5-grid-size-w=[item=nullius-chassis-5][color=#9000d3]Nullius's Armor Chassis 5 Width[/color]
 
-nullius-6-grid-size-h=[item=nullius-chassis-6][color=#e00700]Nullius's Armor Chassis 6 Hight[/color]
-nullius-6-grid-size-w=[item=nullius-chassis-6][color=#e00700]Nullius's Armor Chassis 6 Width[/color]
+nullius-6-grid-size-h=[item=nullius-chassis-6][color=#9000d3]Nullius's Armor Chassis 6 Hight[/color]
+nullius-6-grid-size-w=[item=nullius-chassis-6][color=#9000d3]Nullius's Armor Chassis 6 Width[/color]
 
-n-cas-nullius-chassis-1-inv-size=[item=nullius-chassis-1][color=#e00700]Nullius's Armor Chassis 1 Inv-B[/color]
-n-cas-nullius-chassis-2-inv-size=[item=nullius-chassis-2][color=#e00700]Nullius's Armor Chassis 2 Inv-B[/color]
-n-cas-nullius-chassis-3-inv-size=[item=nullius-chassis-3][color=#e00700]Nullius's Armor Chassis 3 Inv-B[/color]
-n-cas-nullius-chassis-4-inv-size=[item=nullius-chassis-4][color=#e00700]Nullius's Armor Chassis 4 Inv-B[/color]
-n-cas-nullius-chassis-5-inv-size=[item=nullius-chassis-5][color=#e00700]Nullius's Armor Chassis 5 Inv-B[/color]
-n-cas-nullius-chassis-6-inv-size=[item=nullius-chassis-6][color=#e00700]Nullius's Armor Chassis 6 Inv-B[/color]
+n-cas-nullius-chassis-1-inv-size=[item=nullius-chassis-1][color=#9000d3]Nullius's Armor Chassis 1 Inv-B[/color]
+n-cas-nullius-chassis-2-inv-size=[item=nullius-chassis-2][color=#9000d3]Nullius's Armor Chassis 2 Inv-B[/color]
+n-cas-nullius-chassis-3-inv-size=[item=nullius-chassis-3][color=#9000d3]Nullius's Armor Chassis 3 Inv-B[/color]
+n-cas-nullius-chassis-4-inv-size=[item=nullius-chassis-4][color=#9000d3]Nullius's Armor Chassis 4 Inv-B[/color]
+n-cas-nullius-chassis-5-inv-size=[item=nullius-chassis-5][color=#9000d3]Nullius's Armor Chassis 5 Inv-B[/color]
+n-cas-nullius-chassis-6-inv-size=[item=nullius-chassis-6][color=#9000d3]Nullius's Armor Chassis 6 Inv-B[/color]
 
 # Power And Armour
 cas-PaA-power-armor-mk3-inv-size=[item=PaA-power-armor-mk3][color=#89CE94]P&A's Power Armour MK3 Inv-B Size[/color]
