--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -63,30 +63,30 @@ mk4-armor-grid-size-h=[item=power-armor-mk4][color=#9000d3]K2's Elektrisk Rustni
 mk4-armor-grid-size-w=[item=power-armor-mk4][color=#9000d3]K2's Elektrisk Rustning MK4 Bredde[/color]
 
 # Nullius
-nullius-1-grid-size-h=[item=nullius-chassis-1][color=#e00700]Nullius's Rustnings Ramme 1 Høyde[/color]
-nullius-1-grid-size-w=[item=nullius-chassis-1][color=#e00700]Nullius's Rustnings Ramme 1 Bredde[/color]
+nullius-1-grid-size-h=[item=nullius-chassis-1][color=#9000d3]Nullius's Rustnings Ramme 1 Høyde[/color]
+nullius-1-grid-size-w=[item=nullius-chassis-1][color=#9000d3]Nullius's Rustnings Ramme 1 Bredde[/color]
 
-nullius-2-grid-size-h=[item=nullius-chassis-2][color=#e00700]Nullius's Rustnings Ramme 2 Høyde[/color]
-nullius-2-grid-size-w=[item=nullius-chassis-2][color=#e00700]Nullius's Rustnings Ramme 2 Bredde[/color]
+nullius-2-grid-size-h=[item=nullius-chassis-2][color=#9000d3]Nullius's Rustnings Ramme 2 Høyde[/color]
+nullius-2-grid-size-w=[item=nullius-chassis-2][color=#9000d3]Nullius's Rustnings Ramme 2 Bredde[/color]
 
-nullius-3-grid-size-h=[item=nullius-chassis-3][color=#e00700]Nullius's Rustnings Ramme 3 Høyde[/color]
-nullius-3-grid-size-w=[item=nullius-chassis-3][color=#e00700]Nullius's Rustnings Ramme 3 Bredde[/color]
+nullius-3-grid-size-h=[item=nullius-chassis-3][color=#9000d3]Nullius's Rustnings Ramme 3 Høyde[/color]
+nullius-3-grid-size-w=[item=nullius-chassis-3][color=#9000d3]Nullius's Rustnings Ramme 3 Bredde[/color]
 
-nullius-4-grid-size-h=[item=nullius-chassis-4][color=#e00700]Nullius's Rustnings Ramme 4 Høyde[/color]
-nullius-4-grid-size-w=[item=nullius-chassis-4][color=#e00700]Nullius's Rustnings Ramme 4 Bredde[/color]
+nullius-4-grid-size-h=[item=nullius-chassis-4][color=#9000d3]Nullius's Rustnings Ramme 4 Høyde[/color]
+nullius-4-grid-size-w=[item=nullius-chassis-4][color=#9000d3]Nullius's Rustnings Ramme 4 Bredde[/color]
 
-nullius-5-grid-size-h=[item=nullius-chassis-5][color=#e00700]Nullius's Rustnings Ramme 5 Høyde[/color]
-nullius-5-grid-size-w=[item=nullius-chassis-5][color=#e00700]Nullius's Rustnings Ramme 5 Bredde[/color]
+nullius-5-grid-size-h=[item=nullius-chassis-5][color=#9000d3]Nullius's Rustnings Ramme 5 Høyde[/color]
+nullius-5-grid-size-w=[item=nullius-chassis-5][color=#9000d3]Nullius's Rustnings Ramme 5 Bredde[/color]
 
-nullius-6-grid-size-h=[item=nullius-chassis-6][color=#e00700]Nullius's Rustnings Ramme 6 Høyde 6[/color]
-nullius-6-grid-size-w=[item=nullius-chassis-6][color=#e00700]Nullius's Rustnings Ramme 6 Bredde 6[/color]
+nullius-6-grid-size-h=[item=nullius-chassis-6][color=#9000d3]Nullius's Rustnings Ramme 6 Høyde 6[/color]
+nullius-6-grid-size-w=[item=nullius-chassis-6][color=#9000d3]Nullius's Rustnings Ramme 6 Bredde 6[/color]
 
-n-cas-nullius-chassis-1-inv-size=[item=nullius-chassis-1][color=#e00700]Nullius's Rustnings Ramme 1 Inv Størrelse-B[/color]
-n-cas-nullius-chassis-2-inv-size=[item=nullius-chassis-2][color=#e00700]Nullius's Rustnings Ramme 2 Inv Størrelse-B[/color]
-n-cas-nullius-chassis-3-inv-size=[item=nullius-chassis-3][color=#e00700]Nullius's Rustnings Ramme 3 Inv Størrelse-B[/color]
-n-cas-nullius-chassis-4-inv-size=[item=nullius-chassis-4][color=#e00700]Nullius's Rustnings Ramme 4 Inv Størrelse-B[/color]
-n-cas-nullius-chassis-5-inv-size=[item=nullius-chassis-5][color=#e00700]Nullius's Rustnings Ramme 5 Inv Størrelse-B[/color]
-n-cas-nullius-chassis-6-inv-size=[item=nullius-chassis-6][color=#e00700]Nullius's Rustnings Ramme 6 Inv Størrelse-B[/color]
+n-cas-nullius-chassis-1-inv-size=[item=nullius-chassis-1][color=#9000d3]Nullius's Rustnings Ramme 1 Inv Størrelse-B[/color]
+n-cas-nullius-chassis-2-inv-size=[item=nullius-chassis-2][color=#9000d3]Nullius's Rustnings Ramme 2 Inv Størrelse-B[/color]
+n-cas-nullius-chassis-3-inv-size=[item=nullius-chassis-3][color=#9000d3]Nullius's Rustnings Ramme 3 Inv Størrelse-B[/color]
+n-cas-nullius-chassis-4-inv-size=[item=nullius-chassis-4][color=#9000d3]Nullius's Rustnings Ramme 4 Inv Størrelse-B[/color]
+n-cas-nullius-chassis-5-inv-size=[item=nullius-chassis-5][color=#9000d3]Nullius's Rustnings Ramme 5 Inv Størrelse-B[/color]
+n-cas-nullius-chassis-6-inv-size=[item=nullius-chassis-6][color=#9000d3]Nullius's Rustnings Ramme 6 Inv Størrelse-B[/color]
 
 # Space Exploration
 cas-se-thruster-suit-inv-size=[item=se-thruster-suit][color=pink]SE Romdrakt 1 Inv[/color]
