--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -304,30 +304,30 @@ mk4-armor-grid-size-h="K2's" Power Armour Mk4 Height\nMin:0\nMax:400\nBase Defau
 mk4-armor-grid-size-w="K2's" Power Armour MK4 Width\nMin:0\nMax:400\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Nullius
-nullius-1-grid-size-h=Nullius's Armor Chassis 1 Høyde\nMin:0\nMax:30\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
-nullius-1-grid-size-w=Nullius's Armor Chassis 1 Bredde\nMin:0\nMax:30\nBase Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-1-grid-size-h=Nullius's Armor Chassis 1 Høyde\nMin:0\nMax:300\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-1-grid-size-w=Nullius's Armor Chassis 1 Bredde\nMin:0\nMax:300\nBase Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
 
-nullius-2-grid-size-h=Nullius's Armor Chassis 2 Høyde\nMin:0\nMax:40\nBase Default:8\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
-nullius-2-grid-size-w=Nullius's Armor Chassis 2 Bredde\nMin:0\nMax:40\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-2-grid-size-h=Nullius's Armor Chassis 2 Høyde\nMin:0\nMax:400\nBase Default:8\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-2-grid-size-w=Nullius's Armor Chassis 2 Bredde\nMin:0\nMax:400\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
 
-nullius-3-grid-size-h=Nullius's Armor Chassis 3 Høyde\nMin:0\nMax:50\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
-nullius-3-grid-size-w=Nullius's Armor Chassis 3 Bredde\nMin:0\nMax:50\nBase Default:8\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-3-grid-size-h=Nullius's Armor Chassis 3 Høyde\nMin:0\nMax:500\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-3-grid-size-w=Nullius's Armor Chassis 3 Bredde\nMin:0\nMax:500\nBase Default:8\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
 
-nullius-4-grid-size-h=Nullius's Armor Chassis 4 Høyde\nMin:0\nMax:60\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
-nullius-4-grid-size-w=Nullius's Armor Chassis 4 Bredde\nMin:0\nMax:60\nBase Default:9\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-4-grid-size-h=Nullius's Armor Chassis 4 Høyde\nMin:0\nMax:600\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-4-grid-size-w=Nullius's Armor Chassis 4 Bredde\nMin:0\nMax:600\nBase Default:9\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
 
-nullius-5-grid-size-h=Nullius's Armor Chassis 5 Høyde\nMin:0\nMax:70\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
-nullius-5-grid-size-w=Nullius's Armor Chassis 5 Bredde\nMin:0\nMax:70\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-5-grid-size-h=Nullius's Armor Chassis 5 Høyde\nMin:0\nMax:700\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-5-grid-size-w=Nullius's Armor Chassis 5 Bredde\nMin:0\nMax:700\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
 
-nullius-6-grid-size-h=Nullius's Armor Chassis 6 Høyde\nMin:0\nMax:80\nBase Default:18\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
-nullius-6-grid-size-w=Nullius's Armor Chassis 6 Bredde\nMin:0\nMax:80\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-6-grid-size-h=Nullius's Armor Chassis 6 Høyde\nMin:0\nMax:800\nBase Default:18\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-6-grid-size-w=Nullius's Armor Chassis 6 Bredde\nMin:0\nMax:800\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
 
-n-cas-nullius-chassis-1-inv-size=Nullius's Armor Chassis 1 \nMin:0\nMax:100\nBase Default:0
-n-cas-nullius-chassis-2-inv-size=Nullius's Armor Chassis 2 \nMin:0\nMax:200\nBase Default:10
-n-cas-nullius-chassis-3-inv-size=Nullius's Armor Chassis 3 \nMin:0\nMax:300\nBase Default:20
-n-cas-nullius-chassis-4-inv-size=Nullius's Armor Chassis 4 \nMin:0\nMax:400\nBase Default:30
-n-cas-nullius-chassis-5-inv-size=Nullius's Armor Chassis 5 \nMin:0\nMax:500\nBase Default:40
-n-cas-nullius-chassis-6-inv-size=Nullius's Armor Chassis 6 \nMin:0\nMax:600\nBase Default:50
+n-cas-nullius-chassis-1-inv-size=Nullius's Armor Chassis 1 \nMin:0\nMax:1000\nBase Default:0
+n-cas-nullius-chassis-2-inv-size=Nullius's Armor Chassis 2 \nMin:0\nMax:2000\nBase Default:10
+n-cas-nullius-chassis-3-inv-size=Nullius's Armor Chassis 3 \nMin:0\nMax:3000\nBase Default:20
+n-cas-nullius-chassis-4-inv-size=Nullius's Armor Chassis 4 \nMin:0\nMax:4000\nBase Default:30
+n-cas-nullius-chassis-5-inv-size=Nullius's Armor Chassis 5 \nMin:0\nMax:5000\nBase Default:40
+n-cas-nullius-chassis-6-inv-size=Nullius's Armor Chassis 6 \nMin:0\nMax:6000\nBase Default:50
 
 # Power And Armour
 cas-PaA-power-armor-mk3-inv-size=P&A Power Armour MK3\nMin:0\nMax:800\nBase Default:60
@@ -393,7 +393,7 @@ m-cas-8-a_mk8-inv-size=P.A.R's Power Armour MK8 Inv-B Size\nMin:0\nMax:4000\nBas
 m-cas-9-a_mk9-inv-size=P.A.R's Power Armour MK9 Inv-B Size\nMin:0\nMax:4500\nBase Default:450\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 m-cas-10-a_mk10-inv-size=P.A.R's Power Armour MK10 Inv-B Size\nMin:0\nMax:5000\nBase Default:500\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-hard_science_required=Adding space science packs to be required in reserching MK6 --> MK10 & MK5 Exo.\nThis setting has noe effect if u use my mod with SE (Space Exploration).
+hard_science_required=Adding space science packs to be required in reserching MK6 --> MK10 & MK5 Exo.\nThis setting has no effect if u use my mod with SE (Space Exploration).
 
 
 # Rampant Arsenal
