--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -10,10 +10,16 @@ v-cas-modular-armor-inv-size=[item=modular-armor][color=#C0C0C0]Modular Armour I
 v-cas-power-armor-inv-size=[item=power-armor][color=#C0C0C0]Power Armour Mk1 Inv-B Size[/color]
 v-cas-power-armor-mk2-inv-size=[item=power-armor-mk2][color=#C0C0C0]Power Armour Mk2 Inv-B Size[/color]
 
-modular-armor-grid-size-h=[item=modular-armor][color=#C0C0C0]Modular Armour Height[/color]
+light-grid-h=[item=light-armor][color=#6a0000]Light Armour Height[/color]
+light-grid-w=[item=light-armor][color=#6a0000]Light Armour Width[/color]
+
+heavy-grid-h=[item=heavy-armor][color=#6a0000]Heavy Armour Height[/color]
+heavy-grid-w=[item=heavy-armor][color=#6a0000]Heavy Armour Width[/color]
+
+modular-armor-grid-size-h=[item=modular-armor][color=#C0C0C0]Modular Armour Hight[/color]
 modular-armor-grid-size-w=[item=modular-armor][color=#C0C0C0]Modular Armour Width[/color]
 
-power-armor-grid-size-h=[item=power-armor][color=#C0C0C0]Power Armour MK1 Height[/color]
+power-armor-grid-size-h=[item=power-armor][color=#C0C0C0]Power Armour MK1 Hight[/color]
 power-armor-grid-size-w=[item=power-armor][color=#C0C0C0]Power Armour MK1 Width[/color]
 
 power-armor-mk2-grid-size-h=[item=power-armor-mk2][color=#C0C0C0]Power Armour MK2 Height[/color]
@@ -206,7 +212,7 @@ se-thruster-suit-4-grid-size-w=[item=se-thruster-suit-4][color=pink]SE's Space S
 
 # Vanilla Armour's
 
-simulation_crash=Checked this box\nSims with equipment grids are removed.\nUn-checked this box \nThe sims are not removed.\n[color=red]Keep marked should the simulation be a black screen w/error message[/color] 
+simulation_crash=Checked this box\nSims with equipment grids are removed.\n\nUn-checked this box \nThe sims are not removed.\n[color=red]Keep marked should the simulation be a black screen w/error message[/color] 
 
 v-cas-light-armor-inv-size=Light Armour\nMin:0\nMax:100\nBase Default:0
 v-cas-heavy-armor-inv-size=Heavy Armour\nMin:0\nMax:200\nBase Default:0
@@ -214,8 +220,14 @@ v-cas-modular-armor-inv-size=Modular Armour\nMin:0\nMax:250\nBase Default:10
 v-cas-power-armor-inv-size=Power Armour Mk1\nMin:0\nMax:500\nBase Default:20
 v-cas-power-armor-mk2-inv-size=Power Armour Mk2\nMin:0\nMax:1000\nBase Default:30
 
-modular-armor-grid-size-h=Modular Armour Height\nMin:0\nMax:10\nBase Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-modular-armor-grid-size-w=Modular Armour Width\nMin:0\nMax:10\nBase Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+light-grid-h=Light Armour\nMin:0\nMax:10\nBase Default:0\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+light-grid-w=Light Armour\nMin:0\nMax:10\nBase Default:0\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+heavy-grid-h=Heavy Armour\nMin:0\nMax:10\nBase Default:0\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+heavy-grid-w=Heavy Armour\nMin:0\nMax:10\nBase Default:0\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+modular-armor-grid-size-h=Modular Armour Height\nMin:0\nMax:15\nBase Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+modular-armor-grid-size-w=Modular Armour Width\nMin:0\nMax:15\nBase Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 power-armor-grid-size-h=Power Armour MK1 Height\nMin:0\nMax:20\nBase Default:7\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 power-armor-grid-size-w=Power Armour MK1 Width\nMin:0\nMax:20\nBase Default:7\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
@@ -269,11 +281,11 @@ extended-armor-mk3-grid-size-w="FE's" Power Armour MK3 Width\nMin:0\nMax:70\nBas
 
 
 # IndustrialRevolution3
-ir3-light-cas-grid-size-h=IR3 Light Armour Height\nMin:0\nMax:10\nBase Default:4\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-ir3-light-cas-grid-size-w=IR3 Light Armour Width\nMin:0\nMax:10\nBase Default:2\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color] 
+ir3-light-cas-grid-size-h=IR3 Light Armour Height\nMin:0\nMax:15\nBase Default:4\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+ir3-light-cas-grid-size-w=IR3 Light Armour Width\nMin:0\nMax:15\nBase Default:2\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color] 
 
-ir3-heavy-cas-grid-size-h=IR3 Heavy Armour Height\nMin:0\nMax:10\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-ir3-heavy-cas-grid-size-w=IR3 Heavy Armour Width\nMin:0\nMax:10\nBase Default:2\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color] 
+ir3-heavy-cas-grid-size-h=IR3 Heavy Armour Height\nMin:0\nMax:15\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+ir3-heavy-cas-grid-size-w=IR3 Heavy Armour Width\nMin:0\nMax:15\nBase Default:2\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color] 
 
 # Space Exploration
 cas-se-thruster-suit-inv-size=SE Space Suit 1\nMin:0\nMax:500\nBase Default:20
@@ -393,7 +405,7 @@ m-cas-8-a_mk8-inv-size=P.A.R's Power Armour MK8 Inv-B Size\nMin:0\nMax:4000\nBas
 m-cas-9-a_mk9-inv-size=P.A.R's Power Armour MK9 Inv-B Size\nMin:0\nMax:4500\nBase Default:450\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 m-cas-10-a_mk10-inv-size=P.A.R's Power Armour MK10 Inv-B Size\nMin:0\nMax:5000\nBase Default:500\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-hard_science_required=Adding space science packs to be required in reserching MK6 --> MK10 & MK5 Exo.\nThis setting has no effect if u use my mod with SE (Space Exploration).
+hard_science_required=Adding space science packs to be required in reserching MK6 --> MK10 & MK5 Exo.\nThis setting has no effect if u use this mod with SE (Space Exploration).
 
 
 # Rampant Arsenal
