--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -1,10 +1,16 @@
 [mod-setting-name]
 # Vanilla Armour's
-v-cas-light-armor-inv-size=[item=light-armor][color=#C0C0C0]lett Rustining Inv Størrelse[/color]
+v-cas-light-armor-inv-size=[item=light-armor][color=#C0C0C0]Lett Rustining Inv Størrelse[/color]
 v-cas-heavy-armor-inv-size=[item=heavy-armor][color=#C0C0C0]Tung Rustining Inv Størrelse[/color]
 v-cas-modular-armor-inv-size=[item=modular-armor][color=#C0C0C0]Modulær Rustining Inv Størrelse[/color]
 v-cas-power-armor-inv-size=[item=power-armor][color=#C0C0C0]Elektrisk Rustining Mk1 Inv Størrelse[/color]
 v-cas-power-armor-mk2-inv-size=[item=power-armor-mk2][color=#C0C0C0]Elektrisk Rustining Mk2 Inv Størrelse[/color]
+
+light-grid-h=[item=light-armor][color=#6a0000]Lett Rustining Høyde[/color]
+light-grid-w=[item=light-armor][color=#6a0000]Lett Rustining Bredde[/color]
+
+heavy-grid-h=[item=heavy-armor][color=#6a0000]Tung Rustining Høyde[/color]
+heavy-grid-w=[item=heavy-armor][color=#6a0000]Tung Rustining Bredde[/color]
 
 modular-armor-grid-size-h=[item=modular-armor][color=#C0C0C0]Modulær Rustning Høyde[/color]
 modular-armor-grid-size-w=[item=modular-armor][color=#C0C0C0]Modulær Rustning Bredde[/color]
@@ -192,8 +198,14 @@ v-cas-modular-armor-inv-size=Modulær Rustning\nMin:0\nMaks:250\nSpillets Normal
 v-cas-power-armor-inv-size=Elektrisk Rustning MK1\nMin:0\nMaks:500\nSpillets Normal:20
 v-cas-power-armor-mk2-inv-size=Elektrisk Rustning MK2\nMin:0\nMaks:1000\nSpillets Normal:30
 
-modular-armor-grid-size-h=Modulær Rustnings Rutenett Høyde\nMin:0\nMaks:10\nSpillets Normal:5\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-modular-armor-grid-size-w=Modulær Rustnings Rutenett Bredde\nMin:0\nMaks:10\nSpillets Normal:5\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+light-grid-h=Lett Rustnings Rutenett Høyde\nMin:0\nMaks:15\nSpillets Normal:0\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+light-grid-w=Lett Rustnings Rutenett Bredde\nMin:0\nMaks:15\nSpillets Normal:0\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+heavy-grid-h=Tung Rustnings Rutenett Høyde\nMin:0\nMaks:15\nSpillets Normal:0\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+heavy-grid-w=Tung Rustnings Rutenett Bredde\nMin:0\nMaks:15\nSpillets Normal:0\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+modular-armor-grid-size-h=Modulær Rustnings Rutenett Høyde\nMin:0\nMaks:15\nSpillets Normal:5\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+modular-armor-grid-size-w=Modulær Rustnings Rutenett Bredde\nMin:0\nMaks:15\nSpillets Normal:5\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
 power-armor-grid-size-h=Elektrisk Rustnings Rutenett Høyde\nMin:0\nMaks:20\nSpillets Normal:7\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 power-armor-grid-size-w=Elektrisk Rustnings Rutenett Bredde\nMin:0\nMaks:20\nSpillets Normal:7\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
@@ -247,11 +259,11 @@ extended-armour-mk3-grid-size-w=FE's Elektrisk Rustning MK3 Bredde\nMin:0\nMaks:
 
 
 # IndustrialRevolution3
-ir3-light-cas-grid-size-h=IR3 Lett Rustning Høyde\nMin:0\nMaks:10\nSpillets Normal:4\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-ir3-light-cas-grid-size-w=IR3 Lett Rustning Bredde\nMin:0\nMaks:10\nSpillets Normal:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
+ir3-light-cas-grid-size-h=IR3 Lett Rustning Høyde\nMin:0\nMaks:15\nSpillets Normal:4\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+ir3-light-cas-grid-size-w=IR3 Lett Rustning Bredde\nMin:0\nMaks:15\nSpillets Normal:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
 
-ir3-heavy-cas-grid-size-h=IR3 Tung Rustning Høyde\nMin:0\nMaks:10\nSpillets Normal:6\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-ir3-heavy-cas-grid-size-w=IR3 Tung Rustning Bredde\nMin:0\nMaks:10\nSpillets Normal:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
+ir3-heavy-cas-grid-size-h=IR3 Tung Rustning Høyde\nMin:0\nMaks:15\nSpillets Normal:6\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+ir3-heavy-cas-grid-size-w=IR3 Tung Rustning Bredde\nMin:0\nMaks:15\nSpillets Normal:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
 
 # Krastorio 2
 cas-k2-power-armor-mk3-inv-size=K2 Elektrisk Rustning Mk3\nMin:0\nMaks:1500\nSpillets Normal:40
