--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -1,7 +1,11 @@
+[achievement-name]
+
+
+Geez-you-a-GOD=Ŏ̸̧͓̖͕̘͖̺̓̓̉̃h̴̘̜͕̪̰̗͚̫̱͊̓̾̽̾ ̴̲̲̬̣̥̭̱̐́̈́̾̓̾̓̀͐͝g̶̙̒̏̈͝ĕ̶̡̛̼̝̮͈̽̇̌͛̆̒͑̃̃͘e̴̲̾̿͛́̉̕͝͠ź̶̛͈̬̲̹̼̖̟͑͒͑̀̌̉ ̸̨͎̥̻͓̟͕̝̫͎̓͐͑͝t̴̥́̍̅ọ̶̡̟̰̯̩̙̲̓͗͛̐̀̇͠ ̵̨̱̃͊̅̒͌͛́͐͝͝O̵͇̟͔̾̓͗P̶̘̦̲͉̈́̓̏͆̕͘͝
+
+
 [mod-setting-name]
-
 # Vanilla Armour's
-
 simulation_crash=Removes simulations
 
 v-cas-light-armor-inv-size=[item=light-armor][color=#C0C0C0]Light Armour Inv-B Size[/color]
