--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -4,6 +4,9 @@
 Geez-you-a-GOD=Ŏ̸̧͓̖͕̘͖̺̓̓̉̃h̴̘̜͕̪̰̗͚̫̱͊̓̾̽̾ ̴̲̲̬̣̥̭̱̐́̈́̾̓̾̓̀͐͝g̶̙̒̏̈͝ĕ̶̡̛̼̝̮͈̽̇̌͛̆̒͑̃̃͘e̴̲̾̿͛́̉̕͝͠ź̶̛͈̬̲̹̼̖̟͑͒͑̀̌̉ ̸̨͎̥̻͓̟͕̝̫͎̓͐͑͝t̴̥́̍̅ọ̶̡̟̰̯̩̙̲̓͗͛̐̀̇͠ ̵̨̱̃͊̅̒͌͛́͐͝͝O̵͇̟͔̾̓͗P̶̘̦̲͉̈́̓̏͆̕͘͝
 
 
+[achievement-description]
+Geez-you-a-GOD=Conditions Needed.\n1-Settings.\n2-Reserch.\n3-Craft\n4-Equip It.
+
 [mod-setting-name]
 # Vanilla Armour's
 simulation_crash=Removes simulations
