--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -1,3 +1,13 @@
+[achievement-name]
+
+
+Geez-you-a-GOD=Ŏ̸̧͓̖͕̘͖̺̓̓̉̃h̴̘̜͕̪̰̗͚̫̱͊̓̾̽̾ ̴̲̲̬̣̥̭̱̐́̈́̾̓̾̓̀͐͝g̶̙̒̏̈͝ĕ̶̡̛̼̝̮͈̽̇̌͛̆̒͑̃̃͘e̴̲̾̿͛́̉̕͝͠ź̶̛͈̬̲̹̼̖̟͑͒͑̀̌̉ ̸̨͎̥̻͓̟͕̝̫͎̓͐͑͝t̴̥́̍̅ọ̶̡̟̰̯̩̙̲̓͗͛̐̀̇͠ ̵̨̱̃͊̅̒͌͛́͐͝͝O̵͇̟͔̾̓͗P̶̘̦̲͉̈́̓̏͆̕͘͝
+
+
+
+[achievement-description]
+Geez-you-a-GOD=Hva du trenger\n1-Justeringer.\n2-Forskning.\n3-Produser/lag\n4-Ta den på.
+
 [mod-setting-name]
 # Vanilla Armour's
 v-cas-light-armor-inv-size=[item=light-armor][color=#C0C0C0]Lett Rustining Inv Størrelse[/color]
